--- a/documents_tei/schemas/working.css
+++ b/documents_tei/schemas/working.css
@@ -1,12 +1,15 @@
-
-
 TEI {
-    background-color: rgb(237, 238, 238);
+    background-color: #2b1f1f; 
+    color: #f2e9dc; 
+    font-family: "Times New Roman", serif;
 }
 
+
 teiHeader {
-    background-color: azure;
+    background-color: #3c2a2a; 
     display: block;
+    padding: 15px;
+    border-bottom: 2px solid #5b3d3d;
 }
 
 titleStmt {
@@ -14,32 +17,41 @@ titleStmt {
 }
 title {
     display: block;
+    font-size: 1.8em;
+    font-weight: bold;
+    text-align: center;
 }
 
 title:after {
-    content: "-----\a Edition" ;
+    content: " — Édition numérique —";
     display: block;
+    font-size: 0.8em;
+    margin-top: 5px;
+    color: #c9b8a6;
 }
+
 
 publicationStmt {
     display: inline;
-        }
-
+}
 
 publicationStmt:after {
     content:"\a";
     white-space: pre;
-}        
-
+}
 
 publisher::after {
     display: inline;
     content: ": ";
+    color: #c9b8a6;
 }
 
+
 sourceDesc::before {
-    content: "---- \a\a Source";
+    content: "Source : ";
     display: inline;
+    font-style: italic;
+    color: #b8a89b;
 }
 
 
@@ -48,31 +60,135 @@ profileDesc {
 }
 
 
-name {
-    display: inline;
-}
-
-
-body{
-    color:#000000;
-    background-color:#eddec6;
-    margin:10pt;
-    /*padding:0;*/
-    font-family:Verdana, Tahoma, Geneva, Arial, Helvetica, sans-serif;
+body {
+    background-color: #2b1f1f; 
+    color: #f2e9dc;
+    margin: 20pt;
+    line-height: 1.5em;
+    font-size: 1.05em;
+    font-family: "Times New Roman", serif;
     display: block;
 }
 
 p {
     display: block;
+    margin-bottom: 1em;
 }
+
 
 name[ana="person"] {
-  width: 10px;
-  padding: 6px;
-  background-color: rgb(230, 179, 154);
+    padding: 3px 6px;
+    background-color: #5e2f2f;
+    border-radius: 4px;
+    font-weight: bold;
+    color: #f4ebe2;
 }
 
+
 idno {
-    color:dodgerblue;
+    color: #a56b6b;
     display: block;
+    font-size: 0.9em;
+    font-style: italic;
+    margin-top: 5px;
+}
+
+
+front {
+    display: block;
+    margin: 30px 0;
+}
+
+div[type="dedication"] {
+    font-style: italic;
+    text-align: center;
+    margin-bottom: 40px;
+    color: #d7cbc1;
+}
+
+div[type="contents"] {
+    margin-bottom: 50px;
+}
+
+div[type="contents"] head {
+    font-size: 1.4em;
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 10px;
+    border-bottom: 1px solid #5b3d3d;
+}
+
+list {
+    display: block;
+    margin: auto;
+    width: fit-content;
+}
+
+item {
+    display: list-item;
+    list-style: square;
+    margin-left: 20px;
+    color: #eaddd1;
+}
+
+
+div[type="poem"] head {
+    text-align: center;
+    font-size: 1.8em;
+    margin-bottom: 25px;
+    color: #d8c1b4;
+    font-weight: bold;
+}
+
+
+lg {
+    display: block;
+    margin-bottom: 18px;
+}
+
+
+l {
+    display: block;
+    margin-left: 30px;
+}
+
+
+back {
+    display: block;
+    margin-top: 60px;
+    padding-top: 20px;
+    border-top: 1px solid #5b3d3d;
+}
+
+div[type="colophon"] {
+    text-align: center;
+    font-style: italic;
+    color: #c7b9ad;
+}
+
+
+
+div[type="contents"] {
+  margin: 0 auto;
+  padding: 20px;
+  display: block;
+  text-align: center;
+}
+
+div[type="contents"] head {
+  font-size: 1.6em;
+  margin-bottom: 15px;
+  display: block;
+}
+
+
+div[type="contents"] list {
+  display: inline-block;
+  text-align: left;
+  margin-bottom: 30px;
+}
+
+div[type="contents"] item {
+  display: list-item;
+  margin-left: 20px;
 }
